refactoring binary Tree, binary tree problems